src/app/components/alerts/alerts.component.scss
.alerts {
  background: rgb(236 112 99 / 65%);
  border-radius: 20px;
  padding: 20px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 20vw;
  height: 20vh;
  backdrop-filter: blur(10px);
}

.title{
  display: flex;
  justify-content: center;
}

.alerts-list{
  display: flex;
  flex-direction: column;
  overflow-y: auto;
}

.alerts-list::-webkit-scrollbar-track
{
  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
  border-radius: 10px;
  background-color: rgb(162 172 175 / 20%);
}

.alerts-list::-webkit-scrollbar
{
  width: 12px;
  background-color: rgb(0 0 0 / 0%);;
}

.alerts-list::-webkit-scrollbar-thumb
{
  border-radius: 10px;
  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
  background-color: rgb(205 92 92 / 80%);
  }

.alert {
  padding: 10px;
  border-bottom: 1px solid #4e4f5159;
  position: relative;
  width: 90%;
}

.alert:last-child {
  border-bottom: none; /* Remove bottom border from the last alert to prevent a line after the last item */
}

